
#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This file describes release notes for
#        the ssa IOC Application.
#
#--------------------------------------------------------------

R1.1.12: 22-Mar-2022  M. Dunning (mdunning)
    Add CM and cavity PVs
    Add simulated PVs for dev testing

R1.1.11: 17-Mar-2022  M. Dunning (mdunning)
    Add power off routine for all SSAs

R1.1.10: 17-Mar-2022  M. Dunning (mdunning)
    Add access security, default group is MCC.

R1.1.9: 16-Mar-2022  M. Dunning (mdunning)
    Add SRF permit feature, which allows selective enabling/disabling of SSA power on.
            This will be used by the SRF group during commissioning.
            The enable/disable PVs will be controlled by epics access security (EOICDESK).

R1.1.8: 14-Mar-2022  M. Dunning (mdunning)
    Add SSA type record.  This is used in the seq routine.
    Enhance seq routine message printing
    Remove unused CA3900 seq file
    Use common records for CA186 SSA
    Refine 7kW power on and fault reset seq states
    Add seq debug record

R1.1.7: 28-Feb-2022  M. Dunning (mdunning)
    Add PowerOnStatus PV.  This is a binary PV which simply shows if the SSA is on or not.
    Add dynamic alarm limts for drain & PS voltage setpoints
    Add MS attribute to power readbacks

R1.1.6: 14-Oct-2021  M. Dunning (mdunning)
    Update L3B downstream SSAs: some are now 4.6 and 7 kW
    Clean up unused startup files

R1.1.5: 31-Aug-2021  M. Dunning (mdunning)
    Move sioc-b15-ssa1 to 3.8 kW SSA
    Move sioc-b15-ssa4 to 3.9 GHz SSA
    Add sioc-b15-ssa5 for 3.8 kW SSA

R1.1.4: 19-May-2021  M. Dunning (mdunning)
    Uncomment archive files

R1.1.3: 21-Apr-2021  M. Dunning (mdunning)
    Add offset and units for CA186 FWD and REF module power records
    Add op directory for displays
    Clean up documentation

R1.1.2: 16-Dec-2020  M. Dunning (mdunning)
    Use new iocsh fornmat for gun SSAs
    Move buncher SSAs to separate IOC