@@ -10,10 +10,9 @@
 # could match a directory name.
 # ==========================================================
 
-#ASYN_MODULE_VERSION=R4.32-1.0.0
 ASYN_MODULE_VERSION=R4.39-0.0.1
-#MODBUS_MODULE_VERSION=R2.11-1.0.0
 MODBUS_MODULE_VERSION=R3.0-0.0.1
+BKHASYN_MODULE_VERSION=R0.4.1
 SEQ_MODULE_VERSION=R2.2.4-1.2
 AUTOSAVE_MODULE_VERSION=R5.10-1.0.0
 CAPUTLOG_MODULE_VERSION=R3.7-1.0.0
@@ -28,6 +27,7 @@ IOCADMIN_MODULE_VERSION=R3.1.16-1.3.0
 
 ASYN=$(EPICS_MODULES)/asyn/$(ASYN_MODULE_VERSION)
 MODBUS=$(EPICS_MODULES)/modbus/$(MODBUS_MODULE_VERSION)
+BKHASYN=$(EPICS_MODULES)/bkhAsyn/$(BKHASYN_MODULE_VERSION)
 SNCSEQ=$(EPICS_MODULES)/seq/$(SEQ_MODULE_VERSION)
 AUTOSAVE=$(EPICS_MODULES)/autosave/$(AUTOSAVE_MODULE_VERSION)
 CAPUTLOG=$(EPICS_MODULES)/caPutLog/$(CAPUTLOG_MODULE_VERSION)
