@@ -1,0 +1,5 @@
+TOP = ../..
+include $(TOP)/configure/CONFIG
+ARCH = rhel6-x86_64
+TARGETS = envPaths
+include $(TOP)/configure/RULES.ioc
