@@ -8,6 +8,9 @@
 #
 #--------------------------------------------------------------
 
+R1.1.13: 24-Mar-2022  M. Dunning (mdunning)
+    Add bkhAsyn support; add sioc-b15-ssa6 for b15 beckhoff
+
 R1.1.12: 22-Mar-2022  M. Dunning (mdunning)
     Add CM and cavity PVs
     Add simulated PVs for dev testing
